demo02-AWS/internet_gateway.tf
resource "aws_internet_gateway" "dev" {
  vpc_id = "${aws_vpc.dev.id}"

  tags {
      Name="user22DeV"
  }
}
